--- a/eclipse_workspace/Beleth/.classpath
+++ b/eclipse_workspace/Beleth/.classpath
@@ -156,5 +156,6 @@
 	<classpathentry kind="lib" path="lib/steamworks4j-server-1.8.0-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/steamworks4j-server-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/steamworks4j-server-1.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
