Implemented config read/write for launcher

--- a/Beleth/src/res/engine-config.properties
+++ b/Beleth/src/res/engine-config.properties
@@ -8,11 +8,11 @@ sightRange = 0.8
 
 validation.enable = 1
 
-// antialiasing
+# antialiasing
 multisamples = 8
 fxaa.enable = 1
 
-// post processing effects
+# post processing effects
 bloom.enable = 1
 ssao.enable = 1
 motionBlur.enable = 1
