Added fullscreen option to launcher + config

--- a/Beleth/src/res/engine-config.properties
+++ b/Beleth/src/res/engine-config.properties
@@ -4,6 +4,7 @@ display.width = 1280
 display.height = 720
 screen.resolution.x = 1280
 screen.resolution.y = 720
+fullscreen.enable = false
 sightRange = 0.8
 
 validation.enable = 1
